package es.kiwi.structural.composite.example2;

public class Leaf extends Component{
    /**
     * 示意方法，子组件对象可能有的功能方法
     */
    @Override
    public void someOperation() {
        // do something
    }
}
